fix: remove unused imports and improve linter configuration

--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,12 @@
       "!**/.source"
     ]
   },
-  "extends": [
-    "ultracite"
-  ]
+  "extends": ["ultracite"],
+  "linter": {
+    "rules": {
+      "performance": {
+        "noNamespaceImport": "warn"
+      }
+    }
+  }
 }
