--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,15 +14,16 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "dotenv": "^17.2.1",
-    "zod": "^4.0.2",
-    "@trpc/server": "^11.5.0",
-    "@trpc/client": "^11.5.0",
     "@hono/trpc-server": "^0.4.0",
-    "hono": "^4.8.2",
+    "@trpc/client": "^11.5.0",
+    "@trpc/server": "^11.5.0",
+    "@types/node": "^24.3.0",
+    "better-auth": "^1.3.7",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.2",
+    "hono": "^4.8.2",
     "pg": "^8.14.1",
-    "better-auth": "^1.3.7"
+    "zod": "^4.0.2"
   },
   "devDependencies": {
     "tsdown": "^0.14.1",
