fix: update main entry point and build script in package.json

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,9 +1,9 @@
 {
   "name": "server",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "type": "module",
   "scripts": {
-  "build": "tsc -p tsconfig.json --outDir ./dist",
+    "build": "tsdown",
     "check-types": "tsc -b",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
     "dev": "bun run --hot src/index.ts",
