--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.85.5",
