--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,6 +14,7 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@better-auth/cli": "^1.3.7",
     "@hono/trpc-server": "^0.4.0",
     "@trpc/client": "^11.5.0",
     "@trpc/server": "^11.5.0",
